# robots_ruicong

./: .gitignore  CMakeLists.txt
CMakedemo/RobotIII_demo/Client/: client.cpp
CMakedemo/RobotIII_demo/Server/: main.cpp
demo/demo_HexapodIII/: main.cpp
demo/demo_HexapodIV/: main.cpp
demo/demo_Plan/: main.cpp  plan.cpp  plan.h
demo/demo_Test/: main.cpp
doc/: Doxyfile  Robots_instruction.docx  robots.chm
src/Robot_Base/: Robot_Base.cpp  Robot_Base.h  Robot_Gait.cpp  Robot_Gait.h
src/Robot_Type_I/: Robot_Type_I.cpp  Robot_Type_I.h
src/Robot_Type_I/resource/Robot_II/: Robot_II.xml
src/Robot_Type_I/resource/Robot_III/: Robot_III.xml  aligned_body_body.x_t  aligned_body_head.x_t  aligned_p1a_left.x_t  aligned_p1a_right.x_t  aligned_p1b.x_t  aligned_p23a.x_t  aligned_p23b.x_t
src/Robot_Type_I/resource/Robot_VIII/: Robot_VIII.xml  body.x_t  p1a.x_t  p1b.x_t  p23a.x_t  p23b.x_t  pIn_acc.txt  pIn_const.txt  pIn_dec.txt
src/Robot_Type_II/: Robot_Type_II.cpp  Robot_Type_II.h
test/: test_simple_walk.cpp
